# Trust-Route

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs  types.rs
contracts/router/: Cargo.toml
contracts/router/src/: lib.rs  test.rs  types.rs
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/lib/: freighter.ts  soroban.ts
frontend/src/types/: index.ts
scripts/: deploy.ps1  deploy.sh  git_commit.sh
